styles.css
body {
	font-family: "Verdana", sans-serif;
	font-size: 18px;
	max-width: 1200px;
	margin-left: auto;
	margin-right: auto;
}

h1 {
	font-size: 2em;
	font-weight: bold;
	padding: 0;
}

h2 {
	padding: 0;
}

div {
	padding: 0;
	margin: 0;
}

#header, #body, #footer {
	height: auto;
	background: lightgray;
	border-left: 1px solid gray;
	border-top: 1px solid gray;
	border-right: 2px solid black;
	border-bottom: 2px solid black;
	padding: 5px;	
}

#postheader, #body, #footer {
	margin-bottom: 50px;
}

a:link, a:visited, a:active {
	text-decoration: none;
	color: maroon;
}

a:hover {
	text-decoration: underline;
	color: black;
}

.morelink {
	font-size: 0.8em;
	font-weight: bold;
	text-align: right;
}

.toplink {
	font-size: 0.7em;
	font-weight: normal;
	vertical-align: top;
}

.outlink {
	padding-right: 15px;
	font-style: italic;
}

ul {
	display: inline-block;
	height: auto;
	width: 100%;
	padding: 0;
	margin: 0;
}

ul li {
	float: left;
	width: 50%;
	list-style-type: none;
	text-align: center;
}

